# wasm-rand

./: Makefile  README.md
client/: index.html  main.js  package.json  webpack.config.js  worker.js
wasm/: Cargo.toml
wasm/src/: lib.rs
