[package]
name = "wasm-rand"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = {version = "0.2", features = ["js"]}
wasm-bindgen = { version = "0.2.76", features = ["serde-serialize"] }
rand = {version = "0.6.5", features = ["wasm-bindgen"]}
console_error_panic_hook = "0.1.6"



